--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -1,8 +1,6 @@
 on:
   pull_request:
     branches:
-      - dev
-      - main
       - test
 jobs:
   lint:
@@ -13,6 +11,7 @@ jobs:
       - uses: actions/setup-python@v3
         with:
           python-version: 3.10.10
+          cache: 'pip'
       - run: pip install --upgrade pip
       - run: pip install -r requirements.txt
       - run: mypy --strict $(git ls-files '*.py')
