--- a/config/config.yml
+++ b/config/config.yml
@@ -27,3 +27,13 @@ operations:
   crop_lx: 0.0
   crop_fy: 0.0
   crop_by: 0.0
+
+5:
+  type: mount
+  picture_path: path
+
+6:
+  type: move
+  x: 0.0
+  y: 0.0
+  z: 0.0
